volkszaehler/vzlogger/vzlogger.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vzlogger
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vzlogger
  sessionAffinity: None
  type: ClusterIP
